Extract HttpUtil from tests and bundle JWT Test Plugin when running JWT Plugin in JIRA via AMPS.